--- a/Day_14_MVC/views/index.ejs
+++ b/Day_14_MVC/views/index.ejs
@@ -6,13 +6,23 @@
     <title>MVC - Model , Views & Controllers</title>
     <style>
         body{
-            background-color: blueviolet;
+            background-color: black;
             color: beige;
         }
     </style>
 </head>
 <body>
     <h1>MVC = Model  View  Controller</h1>
+
+    <form action="/form-submit", method="POST">
+        Name:<input type="text" name="name"><br><br>
+        Email: <input type= "email" name="email" ><br><br>
+        Age: <input type="number" name="age"><br><br>
+        Phone Number: <input type="number" name="Phone"><br><br>
+        Password: <input type="number" name="password"><br><br>
+
+        <input type="submit" name="submit">
+    </form>
 
 </body>
 </html>
